--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
+    "formik": "^2.4.6",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
-    "tailwindcss": "^4.1.6"
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.18",
+    "tailwindcss": "^4.1.6",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
